@@ -30,18 +30,18 @@ import java.util.List;
  * Use with caution - don't modify values inside those!!!
  */
 public class ConstantsProvider {
-    public static final SymbolRange SMALL_LATIN_LETTERS         = SymbolRange.range('a', 'z');
-    public static final SymbolRange CAPITAL_LATIN_LETTERS       = SymbolRange.range('A', 'Z');
-    public static final SymbolRange DIGITS                      = SymbolRange.range('0', '9');
-    public static final char[]      ZERO_LENGTH_CHARACTER_ARRAY = new char[0];
-    public static final BigInteger  BIG_INTEGER_TWO             = BigInteger.valueOf(2);
-    public static final int         SPACE_ASCII_CODE            = 32;     // First printable character in ASCII table
-    public static final int         DEL_ASCII_CODE              = 127;    // Bound for printable characters in ASCII table
-    public static final int         MAX_UNICODE_CHARACTER       = 0xD800 - 1;       // The start of IN_HIGH_SURROGATES - which cause errors when trying to write those values to file
-    public static final SymbolRange ASCII_SYMBOL_RANGE          = SymbolRange.range(SPACE_ASCII_CODE, DEL_ASCII_CODE - 1);  // -1 because we exclude DEL symbol
-    public static final SymbolRange UNICODE_SYMBOL_RANGE        = SymbolRange.range(SPACE_ASCII_CODE, MAX_UNICODE_CHARACTER);
-    public static final int         HEX_RADIX                   = 16;
-    public static final Node[]      EMPTY_NODES_ARR             = new Node[0];
+    public static final SymbolRange SMALL_LATIN_LETTERS = SymbolRange.range('a', 'z');
+    public static final SymbolRange CAPITAL_LATIN_LETTERS = SymbolRange.range('A', 'Z');
+    public static final SymbolRange DIGITS = SymbolRange.range('0', '9');
+    public static final char[] ZERO_LENGTH_CHARACTER_ARRAY = new char[0];
+    public static final BigInteger BIG_INTEGER_TWO = BigInteger.valueOf(2);
+    public static final int SPACE_ASCII_CODE = 32;     // First printable character in ASCII table
+    public static final int DEL_ASCII_CODE = 127;    // Bound for printable characters in ASCII table
+    public static final int MAX_UNICODE_CHARACTER = 0xD800 - 1;       // The start of IN_HIGH_SURROGATES - which cause errors when trying to write those values to file
+    public static final SymbolRange ASCII_SYMBOL_RANGE = SymbolRange.range(SPACE_ASCII_CODE, DEL_ASCII_CODE - 1);  // -1 because we exclude DEL symbol
+    public static final SymbolRange UNICODE_SYMBOL_RANGE = SymbolRange.range(SPACE_ASCII_CODE, MAX_UNICODE_CHARACTER);
+    public static final int HEX_RADIX = 16;
+    public static final Node[] EMPTY_NODES_ARR = new Node[0];
 
     public static final SymbolRange ASCII_DIGITS = SymbolRange.range('0', '9');
 
@@ -50,7 +50,7 @@ public class ConstantsProvider {
     }
 
     public static List<SymbolRange> getAsciiWordCharRanges() {
-        return Collections.unmodifiableList(Arrays.asList(SMALL_LATIN_LETTERS, CAPITAL_LATIN_LETTERS, DIGITS));
+        return List.of(SMALL_LATIN_LETTERS, CAPITAL_LATIN_LETTERS, DIGITS);
     }
 
     public static char[] makeAsciiCharacterArray() {
